# rig-examples

./: README.md
discord_rig_bot/: Cargo.toml
discord_rig_bot/src/: main.rs  rig_agent.rs
hyperliquid_api_example/: Cargo.toml
hyperliquid_api_example/src/: api_tool_template.rs  art_search_tool.rs  flight_search_tool.rs  hyperliquid_perp_search_tool.rs  hyperliquid_spot_search_tool.rs  main.rs
rss_summarizer/rss_summarizer/: Cargo.toml
rss_summarizer/rss_summarizer/src/: main.rs
